--- a/contact.html
+++ b/contact.html
@@ -113,6 +113,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<p>Om Sai Clinic</span>
 							Vinayak Nagar,Mudhol,Bagalkot
 						</p>
+						<p>Sri Allamprabhu Clinic,Kulali,Mudhol,Bagalkot</p>
 						<h4>Get In Touch</h4>
 						<p>+91 8867712152
 							
